# adventofcode-solutions

./: .gitignore  README.base.md  README.md  README.org  aoc  days.nix  derivations.nix  flake.nix  langs.nix  pkgs.nix  readme.nix  shell.nix  test-runner
2015/day1/: run.hs  run.k
2015/day10/: run.hs
2015/day11/: run.hs
2015/day12/: hard.hs  run.hs
2015/day13/: run.hs
2015/day14/: run.hs
2015/day16/: run.hs
2015/day17/: run.hs
2015/day18/: expected.txt  run.hs
2015/day19/: run.hs
2015/day2/: hard.hs  run.hs  run.k
2015/day20/: run.hs
2015/day21/: run.hs
2015/day22/: hard.hs
2015/day23/: ProgramState.hs  run.hs
2015/day24/: run.hs
2015/day3/: expected.txt  hard.hs  run.hs  run.k
2015/day4/: extra.nix  run.hs
2015/day5/: hard.hs  run.hs
2015/day6/: run.hs
2015/day7/: loeb.hs  run.hs
adventofcode/: AoC.hs  adventofcode.cabal  default.nix
day1/: hard.hs
day10/: run.hs
day12/: hard.hs  run.hs
day13/: hard.hs  run.hs
day14/: hard.hs
day15/: run.hs
day16/: run.hs
day17/: run.hs
day18/: run.hs
day19/: hard.hs
day2/: run.hs
day20/: run.hs
day21/: run.hs
day22/: Characters.hs
day25/: run.hs
day4/: hard.hs
day6/: hard.hs  run
day7/: hard.hs  loeb.hs
day8/: hard.hs  run.hs
day9/: run.hs
lib/hs/adventofcode/: AoC.hs  CHANGELOG.md  adventofcode.cabal  default.nix  pkg.nix  shell.nix
lib/hs/adventofcode/AoC/: Grid.hs  Parse.hs  Search.hs
lib/hs/adventofcode/AoC/Draw/: Chars.hs
lib/hs/adventofcode/AoC/Grid/: New.hs
template/: run.asm  run.hs  run.k  run.kk
utils/: gen-tables.py
utils/aoc/: aoc  (+1 more)
(+355 files in other folders)
