cabal-version:       >=1.10
name:                adventofcode
version:             0.1.0.0
license-file:        LICENSE
author:              Rasmus Précenth
maintainer:          rasmus@precenth.eu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     AoC
                       AoC.Draw.Chars
                       AoC.Grid
                       AoC.Grid.New
                       AoC.Parse
                       AoC.Search
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , array
                     , containers
                     , fingertree
                     , hashable
                     , megaparsec
                     , split
                     , unordered-containers
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DerivingStrategies
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , TupleSections
                     , TypeApplications
